# SWC3

C++/: üben.cpp
C++/UE03/: CMakeLists.txt  main.cpp
C++/shapes/: CMakeLists.txt  drawwindow.cpp  drawwindow.h  main.cpp  shape.h
C++/swc3_6_template/: CMakeLists.txt
C++/swc3_6_template/data/: lorem.txt
C++/swc3_6_template/index/: entry.h  main.cpp  utils.cpp  utils.h
C++/swc3_6_template/intro/: main.cpp
C++/swc3_7_template/: CMakeLists.txt  fs.h  ls.cpp  main.cpp  utils.h
Training/library_management/: main.c
UE01/src/calc/: main.c
UE01/src/hello/: main.c
UE02/: main.c
UE02/string/: Makefile  main.c  remarks.md  str.h
UE02/string_cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  str.c
swc3_5_template/: .gitignore  CMakeLists.txt
swc3_5_template/src/: main_templates.cpp  main_vector.cpp  templates.h  utils.h  vector.h
